# ChangeLog for dev-perl/Bio-BigFile
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Sep 2013; Justin Lecher <jlec@gentoo.org> -Bio-BigFile-1.06.ebuild,
  +Bio-BigFile-1.07.ebuild, metadata.xml:
  Version Bump, fix deps

  22 May 2012; Justin Lecher <jlec@gentoo.org> Bio-BigFile-1.06.ebuild:
  Add missing eutils.eclass, bump to EAPI=4, remove unnecessary bits

  09 Feb 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  Bio-BigFile-1.06.ebuild:
  initial ebuild, see bug #402835
