@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>sci-biology</herd>
-  <maintainer>
-    <email>mmokrejs@fold.natur.cuni.cz</email>
-    <name>Martin Mokrejs</name>
-  </maintainer>
+	<herd>sci-biology</herd>
+	<maintainer>
+		<email>mmokrejs@fold.natur.cuni.cz</email>
+		<name>Martin Mokrejs</name>
+	</maintainer>
 </pkgmetadata>
